--- a/src/components/SavedMovies/MoviesCard/MoviesCard.css
+++ b/src/components/SavedMovies/MoviesCard/MoviesCard.css
@@ -18,7 +18,6 @@
 }
 
 .card-list__card:hover .card-list__button-save {
- display: block;
  cursor: pointer;
 }
 
@@ -27,7 +26,6 @@
 }
 
 .card-list__button-save {
- display: none;
  position: absolute;
  top: 14px;
  right: 14px;
@@ -41,7 +39,7 @@
  font-weight: 400;
  font-size: 10px;
  line-height: 9px;
- color: #FFFFFF;
+ color: #ffffff;
 }
 
 .card-list__button-save_type_ok {
@@ -65,7 +63,7 @@
  font-weight: 500;
  font-size: 13px;
  line-height: 16px;
- color: #FFFFFF;
+ color: #ffffff;
  max-width: 250px;
 }
 
@@ -74,9 +72,8 @@
  align-items: center;
  width: 52px;
  height: 18px;
- background: #2F2F2F;
+ background: #2f2f2f;
  border-radius: 3px;
-
 }
 
 .card-list__time {
@@ -87,7 +84,7 @@
  font-weight: 400;
  font-size: 11px;
  line-height: 10px;
- color: #8B8B8B;
+ color: #8b8b8b;
 }
 
 @media screen and (max-width: 1270px) {
